@@ -1,3 +1,8 @@
+Thu Dec  4 20:47:46 CET 2008 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/algos2d/Insertion.java: Modify constructor
+	to allow decoupling minimal and maximal edge length.
+
 Mon Nov 24 11:27:21 CET 2008 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/projection/Sphere.java: New class to
